--- a/exA/assets/css/reset.css
+++ b/exA/assets/css/reset.css
@@ -1,7 +1,7 @@
 :root {
-    --primary-color: #A31C3B;
-    --secondary-color: #570317;
-    --terciary-color: #B0072E;
+    --primary-color: #3FE5F0;
+    --secondary-color: #747FDB;
+    --terciary-color: #9E74F2;
 }
 
 * {
