--- a/exB/assets/css/reset.css
+++ b/exB/assets/css/reset.css
@@ -1,7 +1,7 @@
 :root {
-    --primary-color: #51DBD4;
-    --secondary-color: #3EA8A3;
-    --terciary-color: #225C59;
+    --primary-color: #3FE5F0;
+    --secondary-color: #747FDB;
+    --terciary-color: #9E74F2;
 }
 
 * {
